# desmos_for_alpha

./: Makefile  README.md  pyproject.toml  render.yaml  requirements.txt  setup.cfg
app/: main.py
data/: close.csv  example_returns.csv  high.csv  low.csv  open.csv  returns.csv  volume.csv
dsl/: analyzer.py  ast_utils.py  eval.py  parser.py  registry.py
dsl/functions/: __init__.py  cross_sectional.py  safe_math.py  time_series.py
engine/: __init__.py  backtest_loop.py  vectorized.py
playground/: dsl_test.ipynb  engine_smoke_test.py
scripts/: gen_market_data.py  gen_synthetic_data.py
tests/: test_eval_basics.py  test_manual_alpha_eval.py  test_parse.py  test_vectorized_parity.py
web/: app.js  index.html  style.css
