[metadata]
name = desmos-for-alphas
version = 0.1.0
author = Akshat Srivastava
description = Custom DSL and interpreter for parsing WorldQuant-style alpha expressions.
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas>=2.1
    numpy>=1.26
    lark==1.1.8
    fastapi>=0.111
    uvicorn>=0.30
    pydantic>=2.8

[options.package_data]
* = *.py

[tool:pytest]
addopts = -q
testpaths = tests
